プリミティブラッパークラスの生成にはvalueOfを使用するよう修正