@@ -1249,7 +1249,7 @@ public final class FormulaParser {
 		if (!isPositive) {
 			value = -value;
 		}
-		return new Double(value);
+		return Double.valueOf(value);
 	}
 
 	private Ptg parseNumber() {
